<resources>
    <string name="app_name">justMathIt</string>

    <!-- Login Activity -->
    <string name="login">Σύνδεση</string>
    <string name="new_user">Νέος χρήστης; Εγγραφή εδώ!</string>
    <string name="forgot_pass">Ξέχασες τον κωδικό σού;</string>
    <string name="email">Email...</string>
    <string name="password">Κωδικός...</string>
    <string name="log_in_success">Επιτυχής σύνδεση!</string>
    <string name="log_in_error">Σφάλμα σύνδεσης </string>
    <string name="email_empty">Κένη διεύθυνση email!</string>
    <string name="password_empty">Κενό πεδίο κωδικού!</string>

    <!-- Register Activity -->
    <string name="register">Εγγραφή</string>
    <string name="old_user">Ήδη χρήστης; Σύνδεση εδώ!</string>
    <string name="password_again">Κωδικός ξανά...</string>
    <string name="success_register">Επιτυχής εγγραφή!</string>
    <string name="error_register">Σφάλμα εγγραφής </string>
    <string name="passwords_not_match">Οι κωδικοί δεν ταιριάζουν!</string>
    <string name="email_not_valid">Μη έγκυρο email!</string>
    <string name="password_confirm">Επιβεβαιώστε τον κωδικό!</string>
    <string name="password_length_error">Ο κωδικός πρέπει να έχει τουλάχιστον 6 χαρακτήρες!</string>

    <!-- Forgot Password Activity -->
    <string name="enter_mail_app">Το email σού, στην εφαρμογή...</string>
    <string name="recover">Ανάκτηση κωδικού</string>

    <!-- Main Activity -->
    <string name="appTitle">Just Math It!</string>
    <string name="choose_categ">Επέλεξε την ενότητα!</string>
    <string name="equationsA">Εξισώσεις Α Βαθμού</string>
    <string name="equationsB">Εξισώσεις B Βαθμού</string>
    <string name="suitability_actions">Προτεραιότητα Πράξεων</string>
    <string name="log_out_main">Επιτυχής έξοδος!</string>
    <string name="logOut">Έξοδος</string>
    <string name="about">Σχετικά</string>
    <string name="profile">Προφίλ</string>
    <string name="monday">Δευτέρα</string>
    <string name="tuesday">Τρίτη</string>
    <string name="wednesday">Τετάρτη</string>
    <string name="thursday">Πέμπτη</string>
    <string name="friday">Παρασκευή</string>
    <string name="saturday">Σάββατο</string>
    <string name="sunday">Κυριακή</string>

    <!-- Category Activity -->
    <string name="theory">Θεωρία</string>
    <string name="quiz">Κουίζ</string>
    <string name="back">Πίσω</string>
    <string name="theory_first">Πρώτα διάβασε την</string>
    <string name="then_quiz">...και στην συνέχεια κάνε το</string>
    <string name="good_luck">Καλή επιτυχία! (το έχεις)</string>

    <!-- Success & Fail Quiz Activity -->
    <string name="question_label">Ερώτηση</string>
    <string name="success">Επιτυχία!</string>
    <string name="fail">Αποτυχία!</string>
    <string name="success_quiz">Πέρασες το κουίζ, μπράβο!</string>
    <string name="fail_quiz">Προσπάθησε ξανά, δεν πειράζει, το έχεις!</string>

    <!-- Profile Activity -->
    <string name="save_changes">Αποθήκευση</string>
    <string name="date_account_created">Ημερομηνία δημιουργίας λογαριασμού</string>
    <string name="full_name">Ονοματεπώνυμο</string>
    <string name="no_name">Δεν υπάρχει όνομα</string>
    <string name="age">Ηλικία</string>
    <string name="no_age">Δεν υπάρχει ηλικία</string>
    <string name="country">Χώρα</string>
    <string name="no_country">Δεν υπάρχει χώρα</string>
    <string name="update_user_profile">Επιτυχής ενημέρωση προφίλ!</string>

</resources>