<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CategoryActivity">

    <TextView
        android:id="@+id/txtCategoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="176dp"
        android:gravity="center"
        android:textColor="#0C0C0C"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTheory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:text="@string/theory"
        app:layout_constraintEnd_toEndOf="@+id/txtCategoryTitle"
        app:layout_constraintStart_toStartOf="@+id/txtCategoryTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/quiz"
        app:layout_constraintEnd_toEndOf="@+id/btnTheory"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="@+id/btnTheory"
        app:layout_constraintTop_toBottomOf="@+id/btnTheory" />

    <Button
        android:id="@+id/btnBackProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:backgroundTint="#EC0505"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="@+id/txtGoodLuck"
        app:layout_constraintStart_toStartOf="@+id/txtGoodLuck"
        app:layout_constraintTop_toBottomOf="@+id/txtGoodLuck" />

    <TextView
        android:id="@+id/txtTheoryFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:text="@string/theory_first"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtCategoryTitle"
        app:layout_constraintStart_toStartOf="@+id/txtCategoryTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtThenDoQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/then_quiz"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnTheory"
        app:layout_constraintStart_toStartOf="@+id/btnTheory"
        app:layout_constraintTop_toBottomOf="@+id/btnTheory" />

    <TextView
        android:id="@+id/txtGoodLuck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="107dp"
        android:gravity="center"
        android:text="@string/good_luck"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnQuiz"
        app:layout_constraintStart_toStartOf="@+id/btnQuiz"
        app:layout_constraintTop_toBottomOf="@+id/btnQuiz" />
</androidx.constraintlayout.widget.ConstraintLayout>